# StreamDEA

./: Makefile  README.md  app.py  pyproject.toml  requirements.txt
src/core/analyze/: analyze_main.py  deseq.py  plots.py
src/utils/data_handling/: pandas.py
src/utils/streamlit_utils/: utils.py
test/: COUNT.tsv  col.tsv
